// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`save button component handles changing based on behavior shows error alert if save fails 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  >
    <Alert
      className="ds-u-margin-bottom--2"
      role="region"
      variation="error"
    >
      Now there is an error
    </Alert>
  </div>
  <Button
    onClick={[Function]}
    type="button"
    variation="success"
  >
    Saved
  </Button>
</div>
`;

exports[`save button component handles changing based on behavior shows success alert if saved 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  >
    <Alert
      className="ds-u-margin-bottom--2"
      role="region"
      variation="success"
    >
      Save successful!
    </Alert>
  </div>
  <Button
    onClick={[Function]}
    type="button"
    variation="success"
  >
    Saved
  </Button>
</div>
`;

exports[`save button component handles changing based on behavior shows success alert if saved 2`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  />
  <Button
    onClick={[Function]}
    type="button"
    variation="success"
  >
    Saved
  </Button>
</div>
`;

exports[`save button component renders if does not need saving, not working, no error 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  />
  <Button
    onClick={[Function]}
    type="button"
    variation="success"
  >
    Saved
  </Button>
</div>
`;

exports[`save button component renders if does not need saving, working, no error 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  />
  <Button
    onClick={[Function]}
    type="button"
    variation="success"
  >
    Saved
  </Button>
</div>
`;

exports[`save button component renders if needs saving, not working, no error 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  />
  <Button
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    Save
  </Button>
</div>
`;

exports[`save button component renders if needs saving, working, no error 1`] = `
<div
  className="save-button--container ds-u-margin-bottom--3 visibility--screen"
  id="apd-save-button"
>
  <div
    className="save-button--alert"
  />
  <Button
    onClick={[Function]}
    type="button"
    variation="primary"
  >
    <Spinner
      aria-valuetext="Loading"
      role="progressbar"
    />
     Saving
  </Button>
</div>
`;
